k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-kube-service
  labels:
    app: ci-cd-kube
spec:
  type: ClusterIP
  selector:
    app: ci-cd-kube
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
